1. Video article : The youtube plugin is not showing at the correct width. We would require some CSS to manage how the video will look on that page. http://workwise.dynawebsite.com/low-wage-worker/testvideo

--- a/assets/css/app/app-singleArticle.css
+++ b/assets/css/app/app-singleArticle.css
@@ -344,7 +344,24 @@ section.single-article { padding-bottom: 90px; }
 				
 				line-height: normal;
 				letter-spacing: normal;
-			}	
+			}
+
+			section.single-article figure .videoCage{
+				position: relative;
+				padding-bottom: 56.25%; /* 16:9 */
+				padding-top: 25px;
+				margin-bottom: 20px;
+				height: 0;
+			}
+
+			section.single-article figure .videoCage iframe{
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+			}
+
 
 	section.single-article blockquote {
 		width: 100%;
